--- a/src/index.css
+++ b/src/index.css
@@ -24,21 +24,21 @@
     @apply duration-300;
   }
 
-  .link-btn{
-    @apply text-center; 
-    @apply rounded-lg; 
+  .link-btn {
+    @apply text-center;
+    @apply rounded-lg;
     @apply px-4;
-    @apply py-1;  
-    @apply m-2; 
-    @apply bg-gray-700; 
-    @apply text-gray-100; 
-    @apply font-medium; 
+    @apply py-1;
+    @apply m-2;
+    @apply bg-gray-700;
+    @apply text-gray-100;
+    @apply font-medium;
     @apply text-base;
-    @apply hover:bg-pink-500;
-    @apply duration-300
+    @apply hover:bg-orange-500;
+    @apply duration-300;
   }
 
-  .footer-link{
+  .footer-link {
     @apply bg-white;
     @apply rounded-full;
     @apply hover:shadow-md;
@@ -49,17 +49,19 @@
     @apply duration-500;
   }
 
-  .contact-ip{
-    @apply my-4 ;
-    @apply p-3 ;
-    @apply bg-[#ccd6f6] ;
-    @apply text-gray-800 ;
-    @apply rounded-lg ;
-    @apply placeholder-slate-600 ;
-    @apply focus:outline-none ;
+  .contact-ip {
+    @apply my-4;
+    @apply p-3;
+    @apply bg-[#ccd6f6];
+    @apply text-gray-800;
+    @apply rounded-lg;
+    @apply placeholder-slate-600;
+    @apply focus:outline-none;
     @apply shadow-md  focus:shadow-[#6fc2b0];
   }
-
+  .link-btn {
+    @apply px-4 py-2 rounded-lg border border-orange-600 text-orange-500 hover:bg-orange-600 hover:text-white transition-colors font-semibold;
+  }
 }
 
 /*Scrollbar   */
@@ -94,19 +96,18 @@
   top: 0;
   left: 0;
   width: 100%;
-  z-index:1; /* Adjust z-index as needed */
+  z-index: 1; /* Adjust z-index as needed */
   background-color: #0a192f;
   transition: background-color 0.3s ease; /* Add a smooth transition effect */
 }
 
-.active{
-  color:rgb(240, 160, 10);
-  font-weight:bolder;
-  scale:1.2 !important;
+.active {
+  color: rgb(240, 160, 10);
+  font-weight: bolder;
+  scale: 1.2 !important;
 }
 
 /* ----- */
-
 
 /*--------- Home Page -------*/
 
@@ -147,21 +148,19 @@
 
 /* ------------------ */
 
-
-
 /* -------Project CSS------ */
 
-.content-div{
+.content-div {
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
   height: 250px;
 }
 
-.content-div:hover{
-  background-image:linear-gradient(to right , 
-  rgba(112 , 57 , 255 , 0.8),
-  hsla(242 , 74% , 61% , 0.8)
-  )!important;
-  
+.content-div:hover {
+  background-image: linear-gradient(
+    to right,
+    rgba(112, 57, 255, 0.8),
+    hsla(242, 74%, 61%, 0.8)
+  ) !important;
 }
